{
    "name": "GameInput",
    "maps": [
        {
            "name": "BaseGameplay",
            "id": "243adb45-9057-48c5-ac8c-586ec1fb74ea",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "4dfbc952-cb33-46f1-99d4-91668d3fdd6f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GamepadDirection",
                    "type": "Value",
                    "id": "ddf265c0-91dc-45d5-9f1e-56d5f81a5361",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c6c8e33b-f122-4ea8-8c55-55c8b9a1fa61",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirePrimary",
                    "type": "Button",
                    "id": "f8a3d247-93d5-4ed2-947a-e31d3bec3c81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireSecondary",
                    "type": "Button",
                    "id": "f8f558dd-66e7-465c-bcd1-881632efeadd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenShipMenu",
                    "type": "Button",
                    "id": "6eb2e277-ba14-4ab5-b929-542b3b148a62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectWeaponSlot1",
                    "type": "Button",
                    "id": "c60b7956-0681-4b98-9bb6-8ce4f401bea7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectWeaponSlot2",
                    "type": "Button",
                    "id": "65ceeeb0-0102-4cd9-9e0a-20b76ebb99b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectWeaponSlot3",
                    "type": "Button",
                    "id": "d6573ad0-01dc-4022-817a-bf5570ac1d39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectWeaponSlot4",
                    "type": "Button",
                    "id": "b9aa3c06-e5c9-45e3-ab59-cdec327c9728",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleWeaponSlotForward",
                    "type": "Button",
                    "id": "3066aec8-639a-4da5-b21f-983e89252a78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleWeaponSlotBackward",
                    "type": "Button",
                    "id": "4981fde5-7352-471b-a578-9d01b57c97a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "94e72b81-da9a-494e-96bc-daeadd5a95d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncDecWeaponSlot",
                    "type": "Value",
                    "id": "48ed32f6-66ab-468b-bc90-606c99d4a116",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9a14c5d8-1623-45a5-b781-8f8f2a09bd79",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "57b5579a-beac-4a31-aa63-3236c9f82848",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7a3c0cf6-7f5f-4955-913d-874ddd2b6cf8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1d6dfa0e-d366-4733-a138-1f9459245ffb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b4b1b5c-418b-483d-8a4f-dbcd06418e07",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5765d8d4-730b-42db-aa35-9df5efa18cf5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ddeb859-9508-4662-8b17-45ff164a3592",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d709e67-0042-4fcb-9dd5-bd46bffb3727",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FirePrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16a21bd0-6338-424c-bb86-bc7c84f76d0b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "FirePrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fd6c712-fe14-46a5-bb94-9e1d84ce46ed",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FireSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e44a35d0-1abd-48c6-bbc2-988339aefe06",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "FireSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ea653ef-2e04-48a8-a28e-7c163ad0fc1e",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "OpenShipMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64c4b4cc-54d8-419e-bffc-6924cbf4959a",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "OpenShipMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "244175ab-1921-493c-ad05-9fbf4c276452",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SelectWeaponSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bbe8ffa-96e8-4ea9-9b74-3cd9e964186a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SelectWeaponSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66d938f9-56fd-47d6-bf77-d4ccc9753c5c",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectWeaponSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15320c13-fd2c-41b7-abc4-d5042b7c2986",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectWeaponSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6924853f-952a-47d4-b633-a8babafdfcb5",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CycleWeaponSlotForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03d76fd7-6324-4984-aacb-2d520f3693ff",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CycleWeaponSlotBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10d23cce-1e4f-421c-8d1c-23f815cb533a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12e3c12f-28a8-4b79-852f-eb4502a0d36e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "956de39c-6eb0-4e63-bbb6-b67550882b50",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "GamepadDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cd38c5a8-f4a0-459b-9387-1d5760ad42ed",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncDecWeaponSlot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fe5c9f65-f7b0-47f3-9894-3446be768601",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "IncDecWeaponSlot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "08143fca-04d2-4038-8e5f-27cc24efc190",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "IncDecWeaponSlot",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayershipMenu",
            "id": "c0d88006-03e3-42a9-9241-e3f87984f352",
            "actions": [
                {
                    "name": "CloseShipMenu",
                    "type": "Button",
                    "id": "af4042bb-3743-4dae-a155-111d175c01f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a40132b-f2fc-4ee1-9ba6-a0fcfc52208c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "CloseShipMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "078ca752-00ea-4b20-a9c3-574dfe37049a",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CloseShipMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}